--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           args: --delete
         env:
           AWS_S3_BUCKET: 'by-secret-spot-website'
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_TILES_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_TILES_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_S3_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-north-1'
           SOURCE_DIR: 'src/public'
