--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://example.org/'
+baseURL: 'https://secret-spot-by.com/'
 languageCode: 'en-us'
 title: 'Secret Spot by ro-ro.by'
 theme: 'hugo-book'
