--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: src
+          submodules: true
 
       #####
       # Build artifacts
